fix broken CSS

--- a/Peer/Peer.scss
+++ b/Peer/Peer.scss
@@ -5,7 +5,7 @@
 		position: absolute;
 		z-index: 10;
 		top: 0;
-		left: 2;
+		left: 2px;
 		color: white;
 		font-size: 48px;
 	}
@@ -28,7 +28,7 @@
 		    background: transparent;
 			transition: all .2s ease;
 
-			&::hover {
+			&:hover {
 				background: rgba(0,0,0, .35);
 			}
 
